# multi-agent-orchestrator

./: .gitignore  docker-compose.yml  graph.py  main.py  models.py  payload.json  readme.md  router.py  state.py
agents/: conversational_agent.py  math_agent.py  text_agent.py  weather_agent.py
apis/: oracle_api.py
edite_agent/: Dockerfile  config.py  graph.py  main.py  message_gateway.py  pyproject.toml  stateTypes.py
edite_agent/apis/: oracle_api.py
edite_agent/edital/: __init__.py  agent.py  prompt_builder.py  structured_output.py
edite_agent/edital/tools/: __init__.py  edital_tool.py  writer_tool.py
infra/: docker-compose.yml
multiagent/: graph.py  main.py  mcp_client.py  models.py  requirements.txt  router.py  state.py
multiagent/agents/: conversational_agent.py
multiagent/apis/: edite_api.py  oracle_api.py
multiagent/mcp_servers/: edite_server.py  oraculo_server.py
tools/: math_tools.py  text_tools.py  weather_tools.py
